kubernetes/examples/cert-manager/ingress/service-ingress-initial.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: demo-app
  name: demo-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"    
spec:
  rules:
  - host: demo.site
    http:
      paths:
      - backend:
          serviceName: demo-app
          servicePort: 80
