kubernetes/examples/cert-manager/ingress/service-ingress.yaml
# echo_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: demo-app
  name: demo-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - demo.site
    secretName: letsencrypt-staging
  rules:
  - host: demo.site
    http:
      paths:
      - backend:
          serviceName: demo-app
          servicePort: 80
